# rmodel

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  Makefile.old  README  autogen.sh  cextrae.f  chequea_area.f  config.h.in  configure  configure.ac  downhill.f  findindex.f  fstatistic.f  indexinfo.f  indexr.f  inside_rombo.f  iofunctions.f  plot_diagram.f  return_arrays.f  rmodel.f  rmodel.inc  version.inc
definitions/: Makefile.am  Makefile.in  myindex.rmodel
docs/: conf.py  index.rst  index.rst~  installation.rst  license_agreement.rst  the_ssp_model_predictions.rst  using_the_program.rst
docs/aux/: sample.dat_rmodel
m4/: Makefile.am
models/: MILES_KU_LIS-14.0.def  Makefile.am  Makefile.in  model_bc01.def  model_bc03.def  model_lw05.def  model_thomas03.def  model_thomas03.ext  model_vazdekis06.dat_antiguo  model_vazdekis06.def  model_vazdekis06.def_antiguo  model_vazdekis10_ssp_li_BI_v9.0.def  model_vazdekis10_ssp_li_KB_v9.0.def  model_vazdekis10_ssp_li_KU_v9.0.def  model_vazdekis10_ssp_li_UN_v9.0.def  z_leeme.txt
src/: Makefile.am  Makefile.in  binsearch.f  cextrae.f  chequea_area.f  cleantab.f  dimensions.inc  dimensions.inc.in  downhill.f  fextrae.f  findindex.f  fmean0.f  fpercent.f  fstatistic.f  iextrae.f  include_external_data.f  indexinfo.f  indexr.f  inside_rombo.f  iofunctions.f  lininterp.f  ordena1f.f  plot_diagram.f  ranred.f  return_arrays.f  rmodel.f  rmodel.inc.in  rspace.f  set_my_colors.f  systemfunction.f  tolog77_string.f  transform.f  version.inc.in
temp/: mide_sigma.f
