#
# $Id$
#
modelsdir = $(DATA_DIR)/models
ALLMODELS = model_bc01.dat model_bc01.def model_bc03.dat model_bc03.def \
model_lw05.dat model_lw05.def model_thomas03.dat model_thomas03.def \
model_thomas03.ext model_vazdekis06.dat model_vazdekis06.dat_antiguo \
model_vazdekis06.def model_vazdekis06.def_antiguo

dist_models_DATA = $(ALLMODELS)
