#
#
modelsdir = $(DATA_DIR)/models
ALLMODELS = model_bc01.dat model_bc01.def model_bc03.dat model_bc03.def \
model_lw05.dat model_lw05.def model_thomas03.dat model_thomas03.def \
model_thomas03.ext model_vazdekis06.dat model_vazdekis06.dat_antiguo \
model_vazdekis06.def model_vazdekis06.def_antiguo \
model_vazdekis10_ssp_li_UN_v9.0.dat \
model_vazdekis10_ssp_li_UN_v9.0.def \
model_vazdekis10_ssp_li_BI_v9.0.dat \
model_vazdekis10_ssp_li_BI_v9.0.def \
model_vazdekis10_ssp_li_KU_v9.0.dat \
model_vazdekis10_ssp_li_KU_v9.0.def \
model_vazdekis10_ssp_li_KB_v9.0.dat \
model_vazdekis10_ssp_li_KB_v9.0.def \
MILES_KU_LIS-14.0.dat MILES_KU_LIS-14.0.def

dist_models_DATA = $(ALLMODELS)
