#
bin_PROGRAMS = rmodel
rmodel_SOURCES = binsearch.f \
cextrae.f \
chequea_area.f \
cleantab.f \
dimensions.inc \
downhill.f \
fextrae.f \
findindex.f \
fmean0.f \
fpercent.f \
fstatistic.f \
iextrae.f \
include_external_data.f\
indexinfo.f \
indexr.f \
inside_rombo.f \
iofunctions.f \
lininterp.f \
ordena1f.f \
plot_diagram.f\
ranred.f \
return_arrays.f \
rmodel.f \
rmodel.inc \
rspace.f \
set_my_colors.f\
systemfunction.f \
tolog77_string.f \
transform.f \
version.inc
